# tahoma2d-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.yml  justfile  llms.txt  pyproject.toml  run_server.py  start.ps1  tahoma2d-mcp-backend.spec
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  README_API.md  README_CONTRIBUTING.md  README_DASHBOARD.md  README_INSTALL.md  README_TAURI.md  TOOL_REFERENCE.md
native/: .gitignore  Cargo.toml  README.md  build.ps1  package.json  tauri.conf.json
native/capabilities/: default.json
native/src/: main.rs
src/tahoma2d_mcp/: __init__.py  __main__.py  app.py  cli.py  compat.py  config.py  server.py
src/tahoma2d_mcp/bridge/: ecmascript_gen.py  tahoma_executor.py
src/tahoma2d_mcp/tools/: __init__.py  animation_tools.py  canvas_tools.py  draw_tools.py  effects_tools.py  export_tools.py  layer_tools.py  project_tools.py  render_tools.py  system_tools.py
src/tahoma2d_mcp/utils/: error_handling.py  validation.py
tests/: __init__.py  conftest.py  test_bridge.py  test_system.py
webapp/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/e2e/: tahoma2d-mcp.spec.ts
webapp/src/: App.tsx  config.ts  index.css
webapp/src/api/: mcp.ts
webapp/src/pages/: animation.tsx  canvas.tsx  chat.tsx  compositor.tsx  dashboard.tsx  draw.tsx  effects.tsx  export.tsx  help.tsx  layers.tsx  projects.tsx  render.tsx  settings.tsx
