[project]
name = "tahoma2d-mcp"
version = "0.1.0"
description = "Tahoma2D 2D animation production via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0,<4",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
tahoma2d-mcp = "tahoma2d_mcp.cli:main"
tahoma2d-mcp-server = "tahoma2d_mcp.server:main_stdio"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "bandit>=1.8",
    "safety>=3.3",
    "mypy>=1.15",
    "pre-commit>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tahoma2d_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "RUF", "T201", "S"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
